# AutoBuilder

./: AutoBuilder.cpp  AutoBuilder.rc  AutoBuilder.sln  AutoBuilder.vcxproj  AutoBuilder.vcxproj.filters  CMakeLists.txt  README.md  builder-locfile.txt  command.cpp  command.hpp  cross-compile-for-windows.sh  env.cpp  env.hpp  frame.cpp  frame.hpp  frameBase.cpp  frameBase.hpp  global.cpp  global.hpp  loc.cpp  loc.hpp  main.cpp  main.hpp  ui-interface.cpp  ui-interface.hpp  ui.cpp  ui.hpp
SourceFiles/: AutoBuilder.cpp  AutoBuilder.rc  AutoBuilder.vcxproj  AutoBuilder.vcxproj.filters  Resource.h
